--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="./main.css">
     <script src="./phaser.min.js"></script>
 </head>
-<body>
+<body style="background-color:#708090">
 	<div id="canvas">
 		<div id="menu">
-			<button id="load_string" type="button">Import String</button>
-			<button id="create_string" type="button">Generate String</button><input type="text" id="picross_string">
+			<button id="load_string" class="flat-button"> Import String </button>
+			<button id="create_string" class="flat-button">Generate String</button> <input type="text" id="picross_string">
 		</div>
 	</div>
 	<script src="./src/app.js"></script>
