--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
 <head>
 	<link rel="stylesheet" href="./main.css">
-    <script src="./phaser.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.min.js"></script>
 </head>
 <body style="background-color:#708090">
 	<div id="canvas">
 		<div id="menu">
 			<button id="load_string" class="flat-button"> Import String </button>
 			<button id="create_string" class="flat-button">Generate String</button> <input type="text" id="picross_string">
+			<button id="10x10" class="flat-button"> 10x10 Grid</button>
+			<button id="15x15" class="flat-button"> 15x15  Grid</button>
+			<button id="20x20" class="flat-button"> 20x20  Grid</button>
 		</div>
 	</div>
 	<script src="./src/app.js"></script>
